// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assetHolders should return all Asset Holders for a particular ticker 1`] = `
Object {
  "assetHolders": Object {
    "__typename": "AssetHoldersConnection",
    "nodes": Array [
      Object {
        "__typename": "AssetHolder",
        "amount": "1",
        "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "id": "11BTICKER1/0x0500000000000000000000000000000000000000000000000000000000000000",
        "ticker": "11BTICKER1",
      },
    ],
  },
}
`;

exports[`assetHolders should return all Assets held by an Identity 1`] = `
Object {
  "assetHolders": Object {
    "__typename": "AssetHoldersConnection",
    "nodes": Array [
      Object {
        "__typename": "AssetHolder",
        "amount": "1",
        "ticker": "11ATICKER",
      },
      Object {
        "__typename": "AssetHolder",
        "amount": "1",
        "ticker": "11BTICKER1",
      },
      Object {
        "__typename": "AssetHolder",
        "amount": "1",
        "ticker": "12TICKER",
      },
      Object {
        "__typename": "AssetHolder",
        "amount": "20000",
        "ticker": "13EARNED",
      },
      Object {
        "__typename": "AssetHolder",
        "amount": "1000",
        "ticker": "13TICKER",
      },
      Object {
        "__typename": "AssetHolder",
        "amount": "1",
        "ticker": "14TICKER",
      },
    ],
  },
}
`;

exports[`assetHolders should return amount of Assets held by a particular Identity 1`] = `
Object {
  "assetHolders": Object {
    "__typename": "AssetHoldersConnection",
    "nodes": Array [
      Object {
        "__typename": "AssetHolder",
        "amount": "1",
      },
    ],
  },
}
`;
